--- a/app/index.html
+++ b/app/index.html
@@ -120,6 +120,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                             on-reset-todos="resetTodos">
                 </todo-input>
               </paper-material>
+
+              <paper-material elevation="1">
+                <button type="button"
+                        on-tap="signIn">Sign in with Googles</button>
+              </paper-material>
             </section>
 
             <section data-route="active">
