Add app engine and some padding for login

--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -112,6 +112,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     height: 900px;
   }
 
+  #signInDialog {
+    padding: 32px;
+  }
+
   /* Breakpoints */
 
   /* Small */
