--- a/app/elements/todo-list/todo-list.html
+++ b/app/elements/todo-list/todo-list.html
@@ -28,7 +28,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                                 filter="_byState"
                                 observe="isComplete">
         <todo-item title="[[item.title]]"
-                   completed="[[item.isComplete]]"
+                   is-complete="[[item.isComplete]]"
                    index="[[index]]">
         </todo-item>
       </template>
