--- a/app/elements/todo-item/todo-item.html
+++ b/app/elements/todo-item/todo-item.html
@@ -22,6 +22,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       min-height: 50px;
       box-sizing: border-box;
     }
+    paper-checkbox {
+      margin-right: 16px;
+    }
     paper-checkbox[checked] + #todo-item__title {
       display: inline-block;
       vertical-align: middle;
