--- a/app/elements/todo-list/todo-list.html
+++ b/app/elements/todo-list/todo-list.html
@@ -27,7 +27,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <template is="dom-repeat" items="[[todos]]"
                                 filter="_byState"
                                 observe="isComplete">
-        <todo-item todo="[[item.todo]]"
+        <todo-item label="[[item.label]]"
                    is-complete="[[item.isComplete]]"
                    index="[[index]]">
         </todo-item>
