--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -107,6 +107,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     margin-left: 48px;
   }
 
+  .app-name {
+    font-family: 'Roboto Slab', 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  }
+
   /* Height of the scroll area */
   .content {
     height: 900px;
