--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -109,6 +109,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   .app-name {
     font-family: 'Roboto Slab', 'Roboto', 'Helvetica', 'Arial', sans-serif;
+    font-weight: bold;
   }
 
   /* Height of the scroll area */
