Line up todo-items

--- a/app/elements/todo-input/todo-input.html
+++ b/app/elements/todo-input/todo-input.html
@@ -26,6 +26,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       --paper-input-container-label: {
         font-size: 20px;
         font-family: 'Roboto Slab', 'Roboto', 'Helvetica', 'Arial', sans-serif;
+        font-weight: normal;
         color: #9E9E9E;
       };
       --paper-input-container-input: {
