Fix cropped focus state on paper-icon-button

--- a/app/elements/todo-input/todo-input.html
+++ b/app/elements/todo-input/todo-input.html
@@ -52,7 +52,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       font-size: 14px;
     }
     .todo-input__add-btn[focused] {
-
+      /* https://github.com/robdodson/paper-button/pull/1 */
+      outline-width: 3px;
     }
   </style>
   <template>
