Add clear all completed button

--- a/app/index.html
+++ b/app/index.html
@@ -101,6 +101,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </div>
 
           <div class="middle">
+            <paper-button class="clear-btn"
+                          on-tap="clearCompletedTodos">
+              Clear Completed
+            </paper-button>
+          </div>
+
+          <div class="middle">
             <iron-icon icon="account-circle"
                        on-tap="signOut">
             </iron-icon>
