--- a/app/elements/todo-list/todo-list.html
+++ b/app/elements/todo-list/todo-list.html
@@ -29,7 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                                 observe="isComplete">
         <todo-item label="[[item.label]]"
                    is-complete="[[item.isComplete]]"
-                   index="[[index]]">
+                   uid="[[item.uid]]">
         </todo-item>
       </template>
     </iron-selector>
