--- a/app/elements/todo-item/todo-item.html
+++ b/app/elements/todo-item/todo-item.html
@@ -92,7 +92,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       // todo label was changed. If so, dispatch an event with the
       // new label
       _checkChangesAndNotify: function() {
-        var newLabel = this.$['todoItemLabel'].textContent;
+        var newLabel = this.$.todoItemLabel.textContent;
         if (newLabel !== this.label) {
           this.fire('todo-item-edited', {
             uid: this.uid,
