Fix no label float

--- a/app/elements/todo-input/todo-input.html
+++ b/app/elements/todo-input/todo-input.html
@@ -58,11 +58,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </style>
   <template>
 
-    <!-- FIXME: noLabelFloat doesn't seem to work -->
-    <!-- https://github.com/PolymerElements/paper-input/issues/139 -->
     <paper-input id="todoInput"
                  class="todo-input__input"
-                 noLabelFloat
+                 no-label-float
                  label="Add an item">
     </paper-input>
 
