Quick and dirty responsive tune-up

--- a/app/elements/todo-item/todo-item.html
+++ b/app/elements/todo-item/todo-item.html
@@ -23,7 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       min-height: 50px;
       box-sizing: border-box;
       font-family: 'Roboto Slab', 'Roboto', 'Helvetica', 'Arial', sans-serif;
-      font-size: 20px;
+      font-size: 1rem;
     }
     .todo-item__row {
       position: relative;
