--- a/app/elements/todo-input/todo-input.html
+++ b/app/elements/todo-input/todo-input.html
@@ -24,13 +24,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       };
       /* These styles are not DRY :\ */
       --paper-input-container-label: {
-        font-size: 20px;
+        font-size: 1rem;
         font-family: 'Roboto Slab', 'Roboto', 'Helvetica', 'Arial', sans-serif;
         font-weight: normal;
         color: #9E9E9E;
       };
       --paper-input-container-input: {
-        font-size: 20px;
+        font-size: 1rem;
         font-family: 'Roboto Slab', 'Roboto', 'Helvetica', 'Arial', sans-serif;
       };
       --paper-input-container-underline: {
@@ -49,7 +49,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     .todo-input__add-btn {
       background: #E0E0E0;
       color: #9E9E9E;
-      font-size: 14px;
+      font-size: 0.875rem; /* 14px */
     }
     .todo-input__add-btn[focused] {
       /* https://github.com/robdodson/paper-button/pull/1 */
