--- a/app/index.html
+++ b/app/index.html
@@ -171,6 +171,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </platinum-sw-cache>
     </platinum-sw-register>
 
+    <!-- TODO: Figure out whether if this should be two-way bound or called from app.js -->
     <iron-localstorage name="polymer-todo"
                        value="{{todos}}">
     </iron-localstorage>
